--- a/package.json
+++ b/package.json
@@ -10,12 +10,36 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-masked-view/masked-view": "^0.2.6",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/stack": "^6.2.1",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-rest": "^0.9.0-rc.1",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "graphql": "^16.5.0",
+    "graphql-anywhere": "^4.2.7",
+    "graphql-tag": "^2.12.6",
+    "isomorphic-fetch": "^3.0.0",
+    "qs": "^6.10.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "~3.11.1",
+    "react-native-web": "0.17.7",
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
