--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "apollo-link-rest": "^0.9.0-rc.1",
     "apollo-link-ws": "^1.0.20",
     "apollo-utilities": "^1.3.4",
+    "currency-symbol-map": "^5.1.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "graphql": "^16.5.0",
     "graphql-anywhere": "^4.2.7",
     "graphql-tag": "^2.12.6",
     "isomorphic-fetch": "^3.0.0",
+    "lodash": "^4.17.21",
     "qs": "^6.10.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -38,8 +40,11 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "~3.11.1",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.7",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "twrnc": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
