--- a/brandConfig.json
+++ b/brandConfig.json
@@ -103,6 +103,48 @@
             "description": "This will show as product image if specific product image is not exists.",
             "userInsertType": "imageUpload"
          }
+      },
+      "headerSettings": {
+         "backgroundColor": {
+            "id": "header-bg-col",
+            "label": "Header Background Color",
+            "value": "#000000",
+            "default": "#000000",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "textColor": {
+            "id": "header-text-col",
+            "label": "Header Text Color",
+            "value": "#ffffff",
+            "default": "#ffffff",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "cartIconColor": {
+            "id": "cart-icon-col",
+            "label": "Cart Icon Color",
+            "value": "#f9f9f9",
+            "default": "#f9f9f9",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "cartItemCountTextColor": {
+            "id": "cart-item-count-text-col",
+            "label": "Cart Item Count Text Color",
+            "value": "#ffffff",
+            "default": "#ffffff",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "cartItemCountBackgroundColor": {
+            "id": "cart-item-count-bg-col",
+            "label": "Cart Item Count Background Color",
+            "value": "#EF5266",
+            "default": "#EF5266",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         }
       }
    }
 }
