--- a/brandConfig.json
+++ b/brandConfig.json
@@ -47,16 +47,32 @@
          "buttonBGColor": {
             "id": "button-col",
             "label": "Button Background Color",
-            "value": "#000000",
-            "default": "#000000",
+            "value": "#EF5266",
+            "default": "#EF5266",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "borderActiveColor": {
+            "id": "button-col",
+            "label": "Button border active Color",
+            "value": "#EF5266",
+            "default": "#EF5266",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "borderInactiveColor": {
+            "id": "button-col",
+            "label": "Button border inactive Color",
+            "value": "#A2A2A2",
+            "default": "#A2A2A2",
             "dataType": "color",
             "userInsertType": "colorPicker"
          },
          "buttonDisabledColor": {
             "id": "button-disabled-col",
             "label": "Button Disabled Color",
-            "value": "#7124B433",
-            "default": "#7124B4",
+            "value": "#EF526633",
+            "default": "#EF526633",
             "dataType": "color",
             "userInsertType": "colorPicker"
          }
@@ -142,6 +158,84 @@
             "label": "Cart Item Count Background Color",
             "value": "#EF5266",
             "default": "#EF5266",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         }
+      },
+      "checkIconSettings": {
+         "boundaryColor": {
+            "id": "boundary-col",
+            "label": "Check Icon Boundary Color",
+            "value": "#A2a2a2",
+            "default": "#A2a2a2",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "checkIconUnFillColor": {
+            "id": "check-icon-unfill-col",
+            "label": "Check Icon UnFill Color",
+            "value": "#ffffff",
+            "default": "#ffffff",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "checkIconFillColor": {
+            "id": "check-icon-fill-col",
+            "label": "Check Icon Fill Color",
+            "value": "#EF5266",
+            "default": "#EF5266",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "checkIconTickColor": {
+            "id": "check-icon-tick-col",
+            "label": "Check Icon Tick Color",
+            "value": "#ffffff",
+            "default": "#ffffff",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         }
+      },
+      "counterButtonSettings": {
+         "backgroundColor": {
+            "id": "counter-button-bg-col",
+            "label": "Counter Button Background Color",
+            "value": "#EF5266",
+            "default": "#EF5266",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "countColor": {
+            "id": "counter-count-text-col",
+            "label": "Counter count Text Color",
+            "value": "#000000",
+            "default": "#000000",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "countBackgroundColor": {
+            "id": "counter-count-bg-col",
+            "label": "Counter count Background Color",
+            "value": "#ffffff",
+            "default": "#ffffff",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         },
+         "iconColor": {
+            "id": "counter-icon-col",
+            "label": "Counter Icon Color",
+            "value": "#FFFFFF",
+            "default": "#FFFFFF",
+            "dataType": "color",
+            "userInsertType": "colorPicker"
+         }
+      },
+      "modifierSettings": {
+         "footerBackgroundColor": {
+            "id": "footer-bg-col",
+            "label": "Footer Background Color",
+            "value": "#000000",
+            "default": "#000000",
             "dataType": "color",
             "userInsertType": "colorPicker"
          }
