--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
    "dependencies": {
       "@apollo/client": "^3.6.7",
       "@expo-google-fonts/dev": "^0.2.2",
+      "@react-native-async-storage/async-storage": "^1.17.6",
       "@react-native-community/masked-view": "^0.1.11",
       "@react-native-masked-view/masked-view": "^0.2.6",
       "@react-navigation/native": "^6.0.10",
