--- a/app.json
+++ b/app.json
@@ -16,14 +16,22 @@
       },
       "assetBundlePatterns": ["**/*"],
       "ios": {
-         "supportsTablet": true
+         "supportsTablet": true,
+         "config": {
+            "googleMapsApiKey": "AIzaSyAr0_xNXVux88WH3bK9cyke7J23SlXMRZ0"
+         }
       },
       "android": {
          "adaptiveIcon": {
             "foregroundImage": "./assets/adaptive-icon.png",
             "backgroundColor": "#FFFFFF"
          },
-         "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"]
+         "permissions": ["ACCESS_COARSE_LOCATION", "ACCESS_FINE_LOCATION"],
+         "config": {
+            "googleMaps": {
+               "apiKey": "AIzaSyAr0_xNXVux88WH3bK9cyke7J23SlXMRZ0"
+            }
+         }
       },
       "web": {
          "favicon": "./assets/favicon.png"
