--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
       "react-native-dotenv": "^3.3.1",
       "react-native-gesture-handler": "~2.2.1",
       "react-native-google-places-autocomplete": "^2.4.1",
+      "react-native-maps": "^0.31.1",
       "react-native-modal": "^13.0.1",
       "react-native-safe-area-context": "4.2.4",
       "react-native-safe-area-view": "^1.1.1",
