feat: create cart card

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
    "expo": {
-      "name": "HERN-app",
-      "slug": "HERN-app",
+      "name": "Slay",
+      "slug": "Slay",
       "version": "1.0.0",
       "orientation": "portrait",
       "icon": "./assets/icon.png",
