--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
       "@react-navigation/stack": "^6.2.1",
       "axios": "^0.27.2",
       "currency-symbol-map": "^5.1.0",
+      "date-fns": "^2.28.0",
       "expo": "~45.0.0",
       "expo-location": "~14.2.2",
       "expo-status-bar": "~1.3.0",
@@ -45,6 +46,7 @@
       "react-native-svg": "^12.3.0",
       "react-native-web": "0.17.7",
       "react-navigation-stack": "^2.10.4",
+      "rrule": "^2.7.0",
       "twrnc": "^3.3.2"
    },
    "devDependencies": {
