--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "@react-native-community/geolocation": "^2.1.0",
       "@react-native-community/masked-view": "^0.1.11",
       "@react-native-masked-view/masked-view": "^0.2.6",
+      "@react-navigation/bottom-tabs": "^6.3.1",
       "@react-navigation/native": "^6.0.10",
       "@react-navigation/native-stack": "^6.6.2",
       "@react-navigation/stack": "^6.2.1",
