--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "@apollo/client": "^3.6.7",
       "@expo-google-fonts/dev": "^0.2.2",
       "@react-native-async-storage/async-storage": "^1.17.6",
+      "@react-native-community/clipboard": "^1.5.1",
       "@react-native-community/geolocation": "^2.1.0",
       "@react-native-community/masked-view": "^0.1.11",
       "@react-native-masked-view/masked-view": "^0.2.6",
@@ -20,26 +21,31 @@
       "@react-navigation/native": "^6.0.10",
       "@react-navigation/native-stack": "^6.6.2",
       "@react-navigation/stack": "^6.2.1",
+      "@twotalltotems/react-native-otp-input": "1.3.7",
       "axios": "^0.27.2",
       "currency-symbol-map": "^5.1.0",
       "date-fns": "^2.28.0",
       "expo": "~45.0.0",
+      "expo-jwt": "^1.4.1",
       "expo-location": "~14.2.2",
       "expo-status-bar": "~1.3.0",
       "geolib": "^3.3.3",
       "graphql": "^16.5.0",
       "graphql-ws": "^5.9.0",
+      "jsonwebtoken": "^8.5.1",
       "lodash": "^4.17.21",
       "moment": "^2.29.3",
       "qs": "^6.10.5",
       "react": "17.0.2",
       "react-dom": "17.0.2",
       "react-native": "0.68.2",
+      "react-native-countdown-component": "^2.7.1",
       "react-native-dotenv": "^3.3.1",
       "react-native-gesture-handler": "~2.2.1",
       "react-native-google-places-autocomplete": "^2.4.1",
       "react-native-maps": "^0.31.1",
       "react-native-modal": "^13.0.1",
+      "react-native-phone-number-input": "^2.1.0",
       "react-native-safe-area-context": "4.2.4",
       "react-native-safe-area-view": "^1.1.1",
       "react-native-screens": "~3.11.1",
