--- a/brandConfig.json
+++ b/brandConfig.json
@@ -109,6 +109,14 @@
       }
    },
    "brandSettings": {
+      "brandColor": {
+         "id": "brand-col",
+         "label": "Brand Color",
+         "value": "#EF5266",
+         "default": "#EF5266",
+         "dataType": "color",
+         "userInsertType": "colorPicker"
+      },
       "brandLogo": {
          "label": "brand Logo",
          "value": "https://dailykit-133-test.s3.us-east-2.amazonaws.com/images/54929-slayLogo.png",
