--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
       "react-native-safe-area-view": "^1.1.1",
       "react-native-screens": "~3.11.1",
       "react-native-snap-carousel": "^3.9.1",
+      "react-native-step-indicator": "^1.0.3",
       "react-native-svg": "^12.3.0",
       "react-native-web": "0.17.7",
       "react-navigation-stack": "^2.10.4",
