--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "react-native-gesture-handler": "~2.2.1",
       "react-native-google-places-autocomplete": "^2.4.1",
       "react-native-maps": "^0.31.1",
+      "react-native-maps-directions": "^1.8.0",
       "react-native-modal": "^13.0.1",
       "react-native-phone-number-input": "^2.1.0",
       "react-native-safe-area-context": "4.2.4",
