--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
       "react-native-maps-directions": "^1.8.0",
       "react-native-modal": "^13.0.1",
       "react-native-phone-number-input": "^2.1.0",
-      "react-native-razorpay-expokit": "^2.1.1",
       "react-native-reanimated": "~2.8.0",
       "react-native-safe-area-context": "4.2.4",
       "react-native-safe-area-view": "^1.1.1",
@@ -57,6 +56,7 @@
       "react-native-step-indicator": "^1.0.3",
       "react-native-svg": "^12.3.0",
       "react-native-web": "0.17.7",
+      "react-native-webview": "^11.22.4",
       "react-navigation-stack": "^2.10.4",
       "rrule": "^2.7.0",
       "twrnc": "^3.3.2"
