--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "currency-symbol-map": "^5.1.0",
       "date-fns": "^2.28.0",
       "expo": "~45.0.0",
+      "expo-font": "~10.1.0",
       "expo-jwt": "^1.4.1",
       "expo-location": "~14.2.2",
       "expo-status-bar": "~1.3.0",
