--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
       "currency-symbol-map": "^5.1.0",
       "date-fns": "^2.28.0",
       "expo": "~45.0.0",
-      "expo-device": "~4.2.0",
       "expo-av": "~11.2.3",
+      "expo-device": "~4.2.0",
       "expo-font": "~10.1.0",
       "expo-jwt": "^1.4.1",
       "expo-location": "~14.2.2",
@@ -56,6 +56,7 @@
       "react-native-safe-area-context": "4.2.4",
       "react-native-safe-area-view": "^1.1.1",
       "react-native-screens": "~3.11.1",
+      "react-native-simple-toast": "^1.1.4",
       "react-native-snap-carousel": "^3.9.1",
       "react-native-step-indicator": "^1.0.3",
       "react-native-svg": "^12.3.0",
