--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
       "react-native": "0.68.2",
       "react-native-countdown-component": "^2.7.1",
       "react-native-dotenv": "^3.3.1",
+      "react-native-expo-cached-image": "^1.3.1",
       "react-native-gesture-handler": "~2.2.1",
       "react-native-google-places-autocomplete": "^2.4.1",
       "react-native-maps": "^0.31.1",
