--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
       "@react-native-community/clipboard": "^1.5.1",
       "@react-native-community/geolocation": "^2.1.0",
       "@react-native-community/masked-view": "^0.1.11",
+      "@react-native-community/netinfo": "^9.3.0",
       "@react-native-masked-view/masked-view": "^0.2.6",
       "@react-navigation/bottom-tabs": "^6.3.1",
       "@react-navigation/native": "^6.0.10",
@@ -34,6 +35,7 @@
       "expo-location": "~14.2.2",
       "expo-notifications": "~0.15.4",
       "expo-status-bar": "~1.3.0",
+      "expo-updates": "~0.13.3",
       "geolib": "^3.3.3",
       "graphql": "^16.5.0",
       "graphql-ws": "^5.9.0",
