--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
       "react-native-expo-cached-image": "^1.3.1",
       "react-native-gesture-handler": "~2.2.1",
       "react-native-google-places-autocomplete": "^2.4.1",
-      "react-native-maps": "^0.31.1",
+      "react-native-maps": "0.30.2",
       "react-native-maps-directions": "^1.8.0",
       "react-native-modal": "^13.0.1",
       "react-native-phone-number-input": "^2.1.0",
